--- a/examples/style.css
+++ b/examples/style.css
@@ -7,45 +7,28 @@
     1px 1px 0 #fff; 
 }
 svg.clock text{
-    font: 20px sans-serif;
+    font: 15px sans-serif !important;
     fill: grey;
 }
 .axis line.minor,
 .axis circle{
-    fill: none;
-    stroke: #777;
-    stroke-width: 1px;
-    stroke-dasharray: 1,4;
-}
-.axis line.major{
-    stroke: silver;
-    stroke-width: 1px;
-    stroke-dasharray: none;
+    stroke-dasharray: 2,3;
 }
 circle.outside-circle{
-    fill: none;
-    stroke: gray;
-    stroke-width: 1px;
-    stroke-dasharray: none;
-}
-line.mark{
-    fill: none;
-    stroke: red;
+	stroke-dasharray: none;
 }
 circle.mark, rect.mark, path.mark{
-    stroke: red;
-    fill: orange;
-    fill-opacity: 0.5;
-}
-g.polar-area path.mark{
-    fill: none;
+    fill-opacity: 0.7;
 }
 circle.mark:hover, rect.mark:hover, path.mark:hover{
-    stroke: green;
-    fill: limegreen;
+    fill: orangered !important;
+    stroke: orangered !important;
     fill-opacity: 1;
-    pointer-events: all !important;
 }
+.polar-area path.mark:hover{
+	fill: none !important;
+}
+
 div{
     float: left;
 }
