major mods: name changes: factory->presets, file names, charts directly under micropolar; API changes: axis builds geometries; radial axis ticks and horizontal

--- a/examples/style.css
+++ b/examples/style.css
@@ -25,7 +25,7 @@ circle.mark:hover, rect.mark:hover, path.mark:hover{
     stroke: orangered !important;
     fill-opacity: 1;
 }
-.polar-area path.mark:hover{
+.line-plot path.mark:hover{
 	fill: none !important;
 }
 
